--- a/init.sh.in
+++ b/init.sh.in
@@ -1,3 +1,3 @@
 export CATIMAPATH=${PROJECT_BINARY_DIR}
 #export PATH=$PATH:$CATIMAPATH/bin
-export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$CATIMAPATH
+export ${RPATH_VARIABLE}=$LD_LIBRARY_PATH:$CATIMAPATH
