--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,3 +1,4 @@
+enable_testing()
 add_definitions(-Dlest_FEATURE_COLOURISE=1)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/tests)
 
@@ -6,6 +7,7 @@ set(CATIMA_TESTS test_calculations test_generated test_storage test_structures t
 foreach(entry ${CATIMA_TESTS})
     add_executable(${entry} ${entry}.cpp)
     target_link_libraries(${entry} catima)
+    add_test(${entry} ${PROJECT_BINARY_DIR}/tests/${entry})
 endforeach(entry in ${CATIMA_TESTS})
 
 
