--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,7 +86,7 @@ set_target_properties(catima_static
                         POSITION_INDEPENDENT_CODE ON
                         ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib
                     )
-target_link_libraries(catima ${EXTRA_LIBS} ${GSL_LIBRARIES} )
+target_link_libraries(catima ${EXTRA_LIBS} ${GSL_LIBRARIES} nurex::nurex)
 target_link_libraries(catima_static ${EXTRA_LIBS} ${GSL_LIBRARIES})
 
 target_include_directories(catima 
