--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,6 +10,11 @@ foreach(entry ${CATIMA_TESTS})
     add_test(${entry} ${PROJECT_BINARY_DIR}/tests/${entry})
 endforeach(entry in ${CATIMA_TESTS})
 
+if(NUREX)
+    add_executable(test_reaction test_reaction.cpp)
+    target_link_libraries(test_reaction nurex::nurex catima)
+    add_test(test_reaction ${PROJECT_BINARY_DIR}/tests/test_reaction)
+endif(NUREX)
 
 set(C_TESTS test_c)
 MESSAGE( STATUS "CMAKE_C_COMPILER: " ${CMAKE_C_COMPILER} )
