--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,7 +12,7 @@ endforeach(entry in ${CATIMA_TESTS})
 
 if(NUREX)
     add_executable(test_reaction test_reaction.cpp)
-    target_link_libraries(test_reaction nurex::nurex catima)
+    target_link_libraries(test_reaction catima)
     add_test(test_reaction ${PROJECT_BINARY_DIR}/tests/test_reaction)
 endif(NUREX)
 
