--- a/setup.py.in
+++ b/setup.py.in
@@ -6,9 +6,10 @@ setup(
     ext_modules = cythonize(
 	    [Extension("catima", ["catima.pyx"], 
 		language="c++",
-		#libraries=[${EXTRA_PYTHON_LIBS}],
+		libraries=["catima"],
+                library_dirs=["${CMAKE_CURRENT_BINARY_DIR}/lib"],
 		include_dirs=["${CMAKE_CURRENT_BINARY_DIR}/include"],
-		extra_objects=["${CATIMA_LIB}"],
+#		extra_objects=["${CATIMA_LIB}"],
 		extra_compile_args=["-std=c++14"],
 		extra_link_args=["-std=c++14"]
 		),
