--- a/build_config.in
+++ b/build_config.in
@@ -4,7 +4,7 @@
 #cmakedefine THIN_TARGET_APPROXIMATION
 #cmakedefine GSL_INTEGRATION
 #cmakedefine GLOBAL
-
+#cmakedefine REACTIONS
 #cmakedefine NUREX
 
 #endif
