--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,27 +1,30 @@
-cmake_minimum_required(VERSION 3.2.0)
+ cmake_minimum_required(VERSION 3.2.0)
 project(catima)
 
 ############ options #############
-#option(THREADS "Use multi-threading" ON)
+option(BUILD_SHARED_LIBS "build as shared library" ON)
 option(PYTHON_MODULE "compile the Catima python module(requires numpy and cython installed)" OFF)
 option(TESTS "build tests" OFF)
 option(EXAMPLES "build examples" ON)
-option(GSL_INTEGRATION "use GSL integration" ON)
-option(GENERATE_DATA "make data tables generator" OFF)
-option(THIN_TARGET_APPROXIMATION "thin target approximation" ON)
-option(DOCS "build documentation (requires doxygen)" OFF)
+option(APPS "build catima applications" ON)
 option(GLOBAL "build with global, sources are required" OFF)
 option(REACTIONS "enable/disable nuclear reaction rate" ON)
-option(APPS "build catima applications" ON)
+option(STORE_SPLINES "store splines, if disables splines are always recreated" ON)
+option(GSL_INTEGRATION "use GSL integration" OFF)
+option(GSL_INTERPOLATION "use GSL inteRPOLATION" OFF)
+option(THIN_TARGET_APPROXIMATION "thin target approximation" ON)
+option(GENERATE_DATA "make data tables generator" OFF)
+option(DOCS "build documentation (requires doxygen)" OFF)
 
 ######## build type ############
 if(NOT CMAKE_BUILD_TYPE  STREQUAL "Debug")
     set(CMAKE_BUILD_TYPE "Release")
+    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
     MESSAGE(STATUS "Build type Release")
 else()
     set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g")
     if (${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang" OR ${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
-        set(CMAKE_CXX_FLAGS_DEBUG "-Wall -Wextra -Wfatal-errors -g")
+        set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wextra -Wfatal-errors -Wno-unused-parameter -Wno-sign-compare")
     endif()
     MESSAGE(STATUS "Build type Debug")
 endif()
@@ -41,18 +44,10 @@ else()
 endif()
 
 ############# Requirements ##################
-find_package(GSL REQUIRED)
-MESSAGE(STATUS "GSL include dirs: " ${GSL_INCLUDE_DIRS})
-#if(THREADS)
-#    find_package(Threads REQUIRED)
-#    set (EXTRA_LIBS ${EXTRA_LIBS} ${CMAKE_THREAD_LIBS_INIT})
-#    set (USE_THREADS ON)
-#    MESSAGE(STATUS "Nurex will use threads")
-#endif(THREADS)
-
-find_package(PythonInterp)
-if(PYTHONINTERP_FOUND)
-    message("-- Python found: ${PYTHON_EXECUTABLE}")
+if(GSL_INTEGRATION OR GSL_INTERPOLATION)
+    find_package(GSL REQUIRED)
+    MESSAGE(STATUS "GSL include dirs: " ${GSL_INCLUDE_DIRS})
+    list(APPEND EXTRA_LIBS ${GSL_LIBRARIES} )
 endif()
 
 find_package(nurex QUIET)
@@ -81,29 +76,19 @@ endif(GLOBAL)
 file(GLOB HEADERS *.h)
 
 add_library(catima SHARED ${SOURCES})
-add_library(catima_static STATIC ${SOURCES})
 set_target_properties(catima PROPERTIES
 		      POSITION_INDEPENDENT_CODE ON
                       LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib
                       )
-set_target_properties(catima_static 
-                        PROPERTIES OUTPUT_NAME catima 
-                        POSITION_INDEPENDENT_CODE ON
-                        ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib
-                    )
-target_link_libraries(catima ${EXTRA_LIBS} ${GSL_LIBRARIES})
-target_link_libraries(catima_static ${EXTRA_LIBS} ${GSL_LIBRARIES})
+
+target_link_libraries(catima ${EXTRA_LIBS})
 
 target_include_directories(catima 
                            PUBLIC  $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/include>
                                    $<BUILD_INTERFACE:${GSL_INCLUDE_DIRS}>
                           )
-target_include_directories(catima_static
-                           PUBLIC  $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/include>
-                                   $<BUILD_INTERFACE:${GSL_INCLUDE_DIRS}>
-                          )
+
 add_library(catima::catima ALIAS catima)
-add_library(catima::catima_static ALIAS catima_static)
 
 FILE(COPY ${HEADERS} DESTINATION ${PROJECT_BINARY_DIR}/include/catima)
 
@@ -111,10 +96,23 @@ FILE(COPY ${HEADERS} DESTINATION ${PROJECT_BINARY_DIR}/include/catima)
 MESSAGE( STATUS "CMAKE_CXX_COMPILER: " ${CMAKE_CXX_COMPILER} )
 
 ######## for python module
+find_package(PythonInterp)
+if(PYTHONINTERP_FOUND)
+    message("-- Python found: ${PYTHON_EXECUTABLE}")
+endif()
 if(PYTHON_MODULE)
     if(NOT PYTHONINTERP_FOUND)
         MESSAGE(SEND_ERROR "Python is required to build nurex python modules") 
     endif(NOT PYTHONINTERP_FOUND)
+    #find_package(pybind11 REQUIRED)
+    #set(PYBIND11_CPP_STANDARD -std=c++14)
+    #pybind11_add_module(pycatima pymodule/pycatima)
+    #target_include_directories(pycatima PUBLIC
+    #                                $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/include>
+    #                                $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/libs>
+    #                                $<INSTALL_INTERFACE:include>)
+    #target_link_libraries(pycatima PRIVATE catima)
+
     find_program(CYTHON_EXECUTABLE 
                  NAMES cython cython2 cython3 cython.bat
                  DOC "path to the cython executable"
@@ -182,7 +180,7 @@ endif(APPS)
 ####### install part #######
 FILE(GLOB headers "*.h")
 include(GNUInstallDirs)
-install (TARGETS catima catima_static 
+install (TARGETS catima
         EXPORT catimaConfig
         LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
         ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
@@ -194,7 +192,7 @@ install(EXPORT catimaConfig
         DESTINATION lib/cmake/catima
          )
          
-export(TARGETS catima catima_static NAMESPACE catima:: FILE catimaConfig.cmake)
+export(TARGETS catima NAMESPACE catima:: FILE catimaConfig.cmake)
 export(PACKAGE catima)
 
 ###### packaging #######
