--- a/bin/CMakeLists.txt
+++ b/bin/CMakeLists.txt
@@ -10,12 +10,12 @@ ExternalProject_Add(
 	INSTALL_COMMAND ""
 	PREFIX "external"
 	)
-ExternalProject_Get_Property(json_hpp install_dir)
+ExternalProject_Get_Property(json_hpp download_dir)
 
 foreach(entry ${CATIMA_APPS})
     add_executable(${entry} ${entry}.cpp)
     target_link_libraries(${entry} catima)
-    target_include_directories(${entry} PRIVATE ${install_dir})
+    target_include_directories(${entry} PRIVATE ${download_dir})
 endforeach(entry in ${CATIMA_APPS})
 
 install (TARGETS ${CATIMA_APPS} RUNTIME DESTINATION bin)
