--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,6 +9,6 @@ environment:
 
 build_script:
   - git submodule add -b stable ../../pybind/pybind11 extern/pybind11
-  - git git submodule update --init
+  - git submodule update --init
   - cmake "-G%GENERATOR%" -H. -B_builds -DPYTHON_MODULE=ON
   - cmake --build _builds --config "%CONFIG%"
