--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,8 @@ environment:
     - PYTHON: "C:\\Python38"
 
 build_script:
+  - mkdir build && cd build
   - git submodule add -b stable ../../pybind/pybind11 extern/pybind11
   - git submodule update --init
-  - cmake -G "Visual Studio 16 2019" -DPYTHON_MODULE=ON
-  - cmake --build _builds --config "%CONFIG%"
+  - cmake -G "Visual Studio 16 2019" -DPYTHON_MODULE=ON ../
+  - cmake --build _builds --config "%CONFIG%" .
