--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,16 +1,17 @@
 version: '{build}'
+image:
+    - Visual Studio 2019
 
 environment:
   matrix:
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-      GENERATOR: "Visual Studio 16 2019"
+    - GENERATOR: "Visual Studio 16 2019"
       CONFIG: Release
       ARCH_ARG: "-A x64"
     - PYTHON: "C:\\Python38"
 
 build_script:
-  - mkdir build && cd build
   - git submodule add -b stable ../../pybind/pybind11 extern/pybind11
   - git submodule update --init
+  - mkdir build && cd build
   - cmake -G "Visual Studio 16 2019" -DPYTHON_MODULE=ON ../
   - cmake --build _builds --config "%CONFIG%" .
