--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,8 @@ environment:
     - GENERATOR: "Visual Studio 16 2019"
       CONFIG: Release
       ARCH_ARG: "-A x64"
-    - PYTHON: "C:\\Python38"
+      PYTHON: "C:\\Python38-x64"
+      PYTHON_ARCH: 64
 
 build_script:
   - git submodule add -b stable ../../pybind/pybind11 extern/pybind11
