--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,19 +1,18 @@
 version: '{build}'
-image:
-    - Visual Studio 2019
+
+platform:
+  - x64
 
 environment:
   matrix:
-    - GENERATOR: "Visual Studio 16 2019"
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       CONFIG: Release
-      ARCH_ARG: "-A x64"
-      PYTHON: "C:\\Python38-x64"
+      PYTHON: "C:\\Python37-x64"
       PYTHON_ARCH: 64
-      MSVC_VERSION: "Visual Studio 14 Win64"
 
 build_script:
   - git submodule add -b stable ../../pybind/pybind11 extern/pybind11
   - git submodule update --init
   - mkdir build && cd build
-  - cmake -G "Visual Studio 16 2019" -DPYTHON_MODULE=ON ../
+  - cmake -G "Visual Studio 16 2019" -A%PLATFORM%  -DPYTHON_MODULE=ON ../
   - cmake --build _builds --config "%CONFIG%" .
