--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,4 +15,4 @@ build_script:
   - git submodule update --init
   - mkdir build && cd build
   - cmake -DPYTHON_EXECUTABLE=C:\\Python37-x64\python.exe -G "Visual Studio 16 2019" -A%PLATFORM%  -DPYTHON_MODULE=ON ../
-  - cmake --build _builds --config "%CONFIG%" .
+  - cmake --build ./ --config "%CONFIG%" .
