--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,8 +18,8 @@ build_script:
   - git submodule add -b stable ../../pybind/pybind11 extern/pybind11
   - git submodule update --init
   - mkdir build && cd build
-  - cmake -DBUILD_SHARED_LIBS=OFF -DAPPS=OFF -G "Visual Studio 16 2019" -A%PLATFORM%  -DPYTHON_MODULE=ON ../
+  - cmake -DBUILD_SHARED_LIBS=OFF -DAPPS=OFF -G "Visual Studio 16 2019" -A%PLATFORM%  -DPYTHON_WHEEL=ON ../
   - cmake --build ./ --config "%CONFIG%" .
   
 artifacts:
-  - path: build\Release\*
+  - path: build\dist\*
