--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,7 +19,7 @@ build_script:
   - git submodule update --init
   - mkdir build && cd build
   - cmake -DBUILD_SHARED_LIBS=OFF -DAPPS=OFF -G "Visual Studio 16 2019" -A%PLATFORM%  -DPYTHON_WHEEL=ON ../
-  - cmake --build ./ --config "%CONFIG%" .
+#  - cmake --build ./ --config "%CONFIG%" .
   
 artifacts:
-  - path: build\dist\*
+  - path: build\*
