--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,7 @@ environment:
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
       CONFIG: Release
       PYTHON: "C:\\Python37-x64"
-      PYTHON_EXE: "C:\\Python37-x64\python.exe"
+      PYTHON_EXE: "C:\\Python37-x64\\python.exe"
       PYTHON_ARCH: 64
 
 install:
