--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,7 +35,7 @@ build_script:
   - mkdir build && cd build
 #  - cmake -DBUILD_SHARED_LIBS=OFF -DAPPS=OFF -G "Visual Studio 16 2019" -A%PLATFORM% -DPYTHON_EXECUTABLE=$(python -c "import sys; print(sys.executable)") ../
   - cmake -DBUILD_SHARED_LIBS=OFF -DAPPS=OFF -G "Visual Studio 16 2019" -A%PLATFORM% ../
-  - cmake --build ./ --config "%CONFIG%" .
+  - cmake --build ./ --config "%CONFIG%"
   - python ../pymodule/setup.py bdist_wheel
 
 artifacts:
